simple cleanup of DocumentCompiler prior to rework.